--- a/sourcecode/index.html
+++ b/sourcecode/index.html
@@ -5,10 +5,11 @@
    <body>
       <form action="{{ request.path }}" method="post">
        <div>{{ _("Search") }} <input type="text" name="query"/></div>
-       <div><input type="submit" value="{{ _("Search") }}"/></div>
+       <div>{{ _("Terms") }} <input type="text" name="kTerms"/></div>
+       <div><input type="submit" value="{{ _("Submit") }}"/></div>
        {% module xsrf_form_html() %}
      </form>
-    <div> "Results for query" {{ escape(query) }} </div>
+    <div> Results for query {{ escape(query) }} </div>
      <ul>
        {% for item in items %}
          <li><a href="{{escape(item)}}">{{ escape(item) }}</a></li>
