--- a/sourcecode/index.html
+++ b/sourcecode/index.html
@@ -9,7 +9,7 @@
        <div><input type="submit" value="{{ _("Submit") }}"/></div>
        {% module xsrf_form_html() %}
      </form>
-    <div> Results for query {{ escape(query) }} </div>
+    <div> Results for query "{{ escape(query) }}" </div>
      <ul>
        {% for item in items %}
          <li><a href="{{escape(item)}}">{{ escape(item) }}</a></li>
